fixed overflow and video added

--- a/src/components/molecules/footer/Footer.scss
+++ b/src/components/molecules/footer/Footer.scss
@@ -21,8 +21,9 @@
 .footer__img__right {
   position: absolute;
   top: -14.75rem;
-  right: -10rem;
-  background: url(/assets/pngwing-r.png), 50%;
+  right: 0rem;
+  background: url(/assets/pngwing-r.png);
+  background-position: right;
   background-repeat: no-repeat;
   width: 27.75rem;
   height: 22.375rem;
