--- a/src/index.scss
+++ b/src/index.scss
@@ -4,5 +4,4 @@
 body {
   min-height: 100vh;
   font-family: $primaryFont;
-  overflow-x: hidden;
 }
